tests/snapshots/snapshot__coverage_render.snap
---
source: tests/snapshot.rs
expression: report.render()
---
Supported:
  construct assignment_statement
  construct local_declaration
Assumed:
  (none)
Adapter-backed:
  (none)
Stubbed:
  (none)
Unsupported:
  (none)
Schedule:
  Root.Demo.Update (unscheduled, no trigger selected)
