tests/snapshots/snapshot__integral_trace.snap
---
source: tests/snapshot.rs
expression: trace.to_json()
---
{"time":[0,0.1,0.2,0.3,0.4],"channels":{"Root.Acc.Rate":[2,2,2,2,2],"Root.Acc.Total":[0,0.2,0.4,0.6,0.8]},"external":["Root.Acc.Rate"],"hardware":[],"serial":[]}
