tests/snapshots/snapshot__single_function_trace.snap
---
source: tests/snapshot.rs
expression: trace.to_json()
---
{"time":[0,0.01,0.02,0.03,0.04],"channels":{"Root.Demo.Gain":[2.5,2.5,2.5,2.5,2.5],"Root.Demo.Output":[50,50,50,50,50],"Root.Demo.Speed":[20,20,20,20,20]},"external":["Root.Demo.Gain","Root.Demo.Speed"],"hardware":[],"serial":[]}
