tests/snapshots/snapshot__whole_project_trace.snap
---
source: tests/snapshot.rs
expression: trace.to_json()
---
{"time":[0,0.01,0.02,0.03,0.04,0.05],"channels":{"Root.MR.Fast Out":[50,50,50,50,50,50],"Root.MR.Fast Shared":[5,5,5,5,5,5],"Root.MR.Seed":[2,2,2,2,2,2],"Root.MR.Slow Echo":[4,4,4,4,4,4],"Root.MR.Slow Out":[4,4,4,4,4,4],"Root.MR.Slow Total":[0,0,0.04,0.04,0.08,0.08],"Root.MR.Started":[1,1,1,1,1,1]},"external":["Root.MR.Seed"],"hardware":[],"serial":[],"can":[],"schedule_plan":{"maturity":"assumed","ready_tie_policy":"rate_descending_then_function","entries":[{"function":"Root.MR.Slow Integrator","trigger":{"kind":"periodic","rate_hz":50},"order":0},{"function":"Root.MR.Slow Writer","trigger":{"kind":"periodic","rate_hz":50},"order":1},{"function":"Root.MR.Fast Writer","trigger":{"kind":"periodic","rate_hz":100},"order":2},{"function":"Root.MR.Fast Reader","trigger":{"kind":"periodic","rate_hz":100},"order":3},{"function":"Root.MR.Init","trigger":{"kind":"startup"},"order":null}],"dependencies":[{"writer":"Root.MR.Fast Writer","reader":"Root.MR.Fast Reader","channels":["Root.MR.Fast Shared"]},{"writer":"Root.MR.Slow Writer","reader":"Root.MR.Fast Writer","channels":["Root.MR.Slow Out"]}]},"schedule_executions":[{"function":"Root.MR.Slow Integrator","plan_order":0,"due_position":0,"divisor":2,"phase":"periodic","base_tick":0,"elapsed_s":0,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Slow Writer","plan_order":1,"due_position":1,"divisor":2,"phase":"periodic","base_tick":0,"elapsed_s":0,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":2,"divisor":1,"phase":"periodic","base_tick":0,"elapsed_s":0,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":3,"divisor":1,"phase":"periodic","base_tick":0,"elapsed_s":0,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":0,"divisor":1,"phase":"periodic","base_tick":1,"elapsed_s":0.01,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":false,"source":"held","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":1,"divisor":1,"phase":"periodic","base_tick":1,"elapsed_s":0.01,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Slow Integrator","plan_order":0,"due_position":0,"divisor":2,"phase":"periodic","base_tick":2,"elapsed_s":0.02,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Slow Writer","plan_order":1,"due_position":1,"divisor":2,"phase":"periodic","base_tick":2,"elapsed_s":0.02,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":2,"divisor":1,"phase":"periodic","base_tick":2,"elapsed_s":0.02,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":3,"divisor":1,"phase":"periodic","base_tick":2,"elapsed_s":0.02,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":0,"divisor":1,"phase":"periodic","base_tick":3,"elapsed_s":0.03,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":false,"source":"held","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":1,"divisor":1,"phase":"periodic","base_tick":3,"elapsed_s":0.03,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Slow Integrator","plan_order":0,"due_position":0,"divisor":2,"phase":"periodic","base_tick":4,"elapsed_s":0.04,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Slow Writer","plan_order":1,"due_position":1,"divisor":2,"phase":"periodic","base_tick":4,"elapsed_s":0.04,"base_period_s":0.01,"step_s":0.02,"inputs":[]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":2,"divisor":1,"phase":"periodic","base_tick":4,"elapsed_s":0.04,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":3,"divisor":1,"phase":"periodic","base_tick":4,"elapsed_s":0.04,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]},{"function":"Root.MR.Fast Writer","plan_order":2,"due_position":0,"divisor":1,"phase":"periodic","base_tick":5,"elapsed_s":0.05,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Slow Writer","channel":"Root.MR.Slow Out","writer_due":false,"source":"held","external":false}]},{"function":"Root.MR.Fast Reader","plan_order":3,"due_position":1,"divisor":1,"phase":"periodic","base_tick":5,"elapsed_s":0.05,"base_period_s":0.01,"step_s":0.01,"inputs":[{"writer":"Root.MR.Fast Writer","channel":"Root.MR.Fast Shared","writer_due":true,"source":"current_tick","external":false}]}]}
